department dropdown + swagger
